@@ -23,8 +23,6 @@
     COREPORT_BITDEF(  0x0040, IPT_COIN3,          KEYCODE_4) \
     COREPORT_BIT(     0x0008, "Ball Tilt",        KEYCODE_INSERT) \
     COREPORT_BIT(     0x0004, "Reset",            KEYCODE_0) \
-    COREPORT_BIT(     0x0002, "Extra 1",          KEYCODE_8) \
-    COREPORT_BIT(     0x0001, "Extra 2",          KEYCODE_9) \
   PORT_START /* 1 */ \
     COREPORT_DIPNAME( 0x0100, 0x0100, "B-1") \
       COREPORT_DIPSET(0x0000, "0" ) \
@@ -81,6 +79,128 @@
     CORE_PORTS \
     SIM_PORTS(balls) \
     PEYPER_COMPORTS
+
+#define WOLFMAN_INPUT_PORTS_START \
+  INPUT_PORTS_START(wolfman) \
+    CORE_PORTS \
+    SIM_PORTS(1) \
+  PORT_START /* 0 */ \
+    /* Switch Column 0 */ \
+    COREPORT_BITDEF(  0x0010, IPT_START1,         IP_KEY_DEFAULT) \
+    COREPORT_BITDEF(  0x0020, IPT_COIN1,          IP_KEY_DEFAULT) \
+    COREPORT_BITDEF(  0x0080, IPT_COIN2,          KEYCODE_3) \
+    COREPORT_BIT(     0x0008, "Ball Tilt",        KEYCODE_INSERT) \
+    COREPORT_BIT(     0x0004, "Reset",            KEYCODE_0) \
+  PORT_START /* 1 */ \
+    COREPORT_DIPNAME( 0x0100, 0x0000, "B-1") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0100, "1" ) \
+    COREPORT_DIPNAME( 0x0200, 0x0200, "B-2") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0200, "1" ) \
+    COREPORT_DIPNAME( 0x0400, 0x0400, "B-3") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0400, "1" ) \
+    COREPORT_DIPNAME( 0x0800, 0x0000, "B-4") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0800, "1" ) \
+    COREPORT_DIPNAME( 0x1000, 0x1000, "B-5") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x1000, "1" ) \
+    COREPORT_DIPNAME( 0x2000, 0x0000, "B-6") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x2000, "1" ) \
+    COREPORT_DIPNAME( 0x4000, 0x0000, "B-7") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x4000, "1" ) \
+    COREPORT_DIPNAME( 0x8000, 0x0000, "B-8") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x8000, "1" ) \
+    COREPORT_DIPNAME( 0x0001, 0x0000, "A-1") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0001, "1" ) \
+    COREPORT_DIPNAME( 0x0002, 0x0000, "A-2") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0002, "1" ) \
+    COREPORT_DIPNAME( 0x0004, 0x0000, "A-3") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0004, "1" ) \
+    COREPORT_DIPNAME( 0x0008, 0x0008, "A-4") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0008, "1" ) \
+    COREPORT_DIPNAME( 0x0010, 0x0010, "A-5") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0010, "1" ) \
+    COREPORT_DIPNAME( 0x0020, 0x0020, "A-6") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0020, "1" ) \
+    COREPORT_DIPNAME( 0x0040, 0x0000, "A-7") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0040, "1" ) \
+    COREPORT_DIPNAME( 0x0080, 0x0000, "A-8") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0080, "1" )
+
+#define ODISEA_INPUT_PORTS_START \
+  INPUT_PORTS_START(odisea) \
+    CORE_PORTS \
+    SIM_PORTS(1) \
+  PORT_START /* 0 */ \
+    /* Switch Column 0 */ \
+    COREPORT_BITDEF(  0x0010, IPT_START1,         IP_KEY_DEFAULT) \
+    COREPORT_BITDEF(  0x0020, IPT_COIN1,          IP_KEY_DEFAULT) \
+    COREPORT_BITDEF(  0x0080, IPT_COIN2,          KEYCODE_3) \
+    COREPORT_BIT(     0x0008, "Ball Tilt",        KEYCODE_INSERT) \
+    COREPORT_BIT(     0x0004, "Reset",            KEYCODE_0) \
+  PORT_START /* 1 */ \
+    COREPORT_DIPNAME( 0x0100, 0x0000, "B-1") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0100, "1" ) \
+    COREPORT_DIPNAME( 0x0200, 0x0000, "B-2") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0200, "1" ) \
+    COREPORT_DIPNAME( 0x0400, 0x0000, "B-3") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0400, "1" ) \
+    COREPORT_DIPNAME( 0x0800, 0x0000, "B-4") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0800, "1" ) \
+    COREPORT_DIPNAME( 0x1000, 0x0000, "B-5") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x1000, "1" ) \
+    COREPORT_DIPNAME( 0x2000, 0x0000, "B-6") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x2000, "1" ) \
+    COREPORT_DIPNAME( 0x4000, 0x0000, "B-7") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x4000, "1" ) \
+    COREPORT_DIPNAME( 0x8000, 0x0000, "B-8") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x8000, "1" ) \
+    COREPORT_DIPNAME( 0x0001, 0x0000, "A-1") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0001, "1" ) \
+    COREPORT_DIPNAME( 0x0002, 0x0000, "A-2") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0002, "1" ) \
+    COREPORT_DIPNAME( 0x0004, 0x0000, "A-3") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0004, "1" ) \
+    COREPORT_DIPNAME( 0x0008, 0x0008, "A-4") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0008, "1" ) \
+    COREPORT_DIPNAME( 0x0010, 0x0010, "A-5") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0010, "1" ) \
+    COREPORT_DIPNAME( 0x0020, 0x0020, "A-6") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0020, "1" ) \
+    COREPORT_DIPNAME( 0x0040, 0x0000, "A-7") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0040, "1" ) \
+    COREPORT_DIPNAME( 0x0080, 0x0000, "A-8") \
+      COREPORT_DIPSET(0x0000, "0" ) \
+      COREPORT_DIPSET(0x0080, "1" )
 
 #define PEYPER_INPUT_PORTS_END INPUT_PORTS_END
 
